Add Sobol strategy with src layout and examples

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,17 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "optiseed"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "numpy",
+    "scipy",
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/optiseed"]
