Add Streamlit GUI and sampling options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,12 @@ dependencies = [
     "scipy",
 ]
 
+[project.optional-dependencies]
+gui = [
+    "streamlit",
+    "pandas",
+    "plotly",
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/optiseed"]
