--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "scipy",
 ]
 
+[project.scripts]
+optiseed-gui = "optiseed.gui.cli:main"
+
 [project.optional-dependencies]
 gui = [
     "streamlit",
